--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -1,4 +1,4 @@
-<div class="container">
+<div>
   <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between mb-2 border-bottom">
 
     <a href="/" class="d-flex align-items-center col-md-3 text-dark text-decoration-none">
