--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -1,59 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Page</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/home.css">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Home Page</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <link rel="stylesheet" href="css/main.css">
+    </head>
+    <body class="container">
+        <%- include('partials/header') %>
 
-    <style>
-        /* Başlangıçta formu gizle */
-        #input-box {
-            position: fixed; 
-            bottom: 150px; 
-            left: 50%; 
-            transform: translateX(-50%); /* Kendi ekseninde yarı yarıya sola kaydır */
-            width: 25%; /* Genişlik */
-        }
-        
-        /* Ekstra stil */
-        .border {
-            padding: 20px;
-            background-color: #f8f9fa;
-            border: 1px solid #dee2e6;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-        }
-        </style>
-
-</head>
-<body class="container" >
-    <%- include('partials/header') %>
-
-    <div class="row align-items-end" style="min-height: 85vh;" id="parentDiv">
-      
-    
-        <div class="border d-none" id="input-box"> <!-- Bootstrap 'd-none' sınıfı ile başlangıçta gizli -->
-            <form class="d-flex flex-column row align-items-center">
-                <label class="col-6 text-center mb-4 border-bottom" for="word_en">Enter the Word</label>
-                <div class="col-11 text-center">
-                    <input class=" my-2"  type="text" id="word_en" placeholder="English Word" name="word_en">
-                    <button type="submit">Add</button>
-                </div>
-            </form>
+        <div class="position-absolute bottom-0 w-100">
+            <div class="border d-none" id="input-box"> <!-- Bootstrap 'd-none' sınıfı ile başlangıçta gizli -->
+                <form class="d-flex flex-column row align-items-center">
+                    <label class="col-6 text-center mb-4 border-bottom" for="word_en">Enter the Word</label>
+                    <div class="col-11 text-center">
+                        <input class=" my-2"  type="text" id="word_en" placeholder="English Word" name="word_en">
+                        <button type="submit">Add</button>
+                    </div>
+                </form>
+            </div> 
+            <div class="d-flex justify-content-center pb-1" id="end">
+                <button class="btn btn-transparent" id="plusButton">
+                    <svg  height="60px" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:sketch="http://www.bohemiancoding.com/sketch/ns">
+                        <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" sketch:type="MSPage"><g id="Icon-Set-Filled" sketch:type="MSLayerGroup" transform="translate(-466.000000, -1089.000000)" fill="#000000"><path d="M488,1106 L483,1106 L483,1111 C483,1111.55 482.553,1112 482,1112 C481.447,1112 481,1111.55 481,1111 L481,1106 L476,1106 C475.447,1106 475,1105.55 475,1105 C475,1104.45 475.447,1104 476,1104 L481,1104 L481,1099 C481,1098.45 481.447,1098 482,1098 C482.553,1098 483,1098.45 483,1099 L483,1104 L488,1104 C488.553,1104 489,1104.45 489,1105 C489,1105.55 488.553,1106 488,1106 L488,1106 Z M482,1089 C473.163,1089 466,1096.16 466,1105 C466,1113.84 473.163,1121 482,1121 C490.837,1121 498,1113.84 498,1105 C498,1096.16 490.837,1089 482,1089 L482,1089 Z" id="plus-circle" sketch:type="MSShapeGroup"></path></g></g>
+                    </svg>
+                </button>
+            </div>
         </div>
-        
-        <div class="d-flex justify-content-center py-3" id="end">
-            <button class="btn btn-transparent" id="plusButton">
-                <svg  height="60px" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:sketch="http://www.bohemiancoding.com/sketch/ns">
-                    <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" sketch:type="MSPage"><g id="Icon-Set-Filled" sketch:type="MSLayerGroup" transform="translate(-466.000000, -1089.000000)" fill="#000000"><path d="M488,1106 L483,1106 L483,1111 C483,1111.55 482.553,1112 482,1112 C481.447,1112 481,1111.55 481,1111 L481,1106 L476,1106 C475.447,1106 475,1105.55 475,1105 C475,1104.45 475.447,1104 476,1104 L481,1104 L481,1099 C481,1098.45 481.447,1098 482,1098 C482.553,1098 483,1098.45 483,1099 L483,1104 L488,1104 C488.553,1104 489,1104.45 489,1105 C489,1105.55 488.553,1106 488,1106 L488,1106 Z M482,1089 C473.163,1089 466,1096.16 466,1105 C466,1113.84 473.163,1121 482,1121 C490.837,1121 498,1113.84 498,1105 C498,1096.16 490.837,1089 482,1089 L482,1089 Z" id="plus-circle" sketch:type="MSShapeGroup"></path></g></g>
-                </svg>
-            </button>
-        </div>
-    </div>
     
-    <%- include('partials/footer') %>
-    <script src="js/cardCreator.js"></script> 
-</body>
+        
+        <%- include('partials/footer') %>
+        <script src="js/cardCreator.js"></script> 
+    </body>
 </html>
