--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -1,15 +1,18 @@
-<header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between mb-2 border-bottom sticky-top">
-  <a href="/" class="d-flex align-items-center col-md-3 text-dark text-decoration-none">
-    <img src="images/echoverseLogo.png" alt="Header logo" class="mr-5" style="width: 70px;">
-    <span class="fw-bold">Echo Verse</span>
-  </a>
-  <ul class="nav col-6 justify-content-center gap-3">
-    <li><a href="/" class="nav-link px-2 link-secondary"><span style="font-weight: bold;">Home</span></a></li>
-    <li><a href="/words" class="nav-link px-2 link-dark"><span style="font-weight: bold;">Words</span></a></li>
-    <li><a href="/practice" class="nav-link px-2 link-dark"><span style="font-weight: bold;">Practice </span></a></li>
-  </ul>
-  <div class="col-md-3 text-end">
-    <button type="button" class="btn btn-outline-secondary me-2">Login</button>
-    <button type="button" class="btn btn-secondary">Sign-up</button>
-  </div>
-</header>
+
+<div class="container">
+  <header class="d-flex align-items-center justify-content-md-between py-2 border-bottom">
+    <a href="/" class="d-flex align-items-center text-dark text-decoration-none">
+      <img src="images/echoverseLogo.png" alt="Header logo" style="width: 70px;">
+      <span class="fw-bold">Echo Verse</span>
+    </a>
+    <ul class="nav gap-4">
+      <li><a href="/" class="nav-link px-2 link-secondary"><span style="font-weight: bold;">Home</span></a></li>
+      <li><a href="/words" class="nav-link px-2 link-dark"><span style="font-weight: bold;">Words</span></a></li>
+      <li><a href="/practice" class="nav-link px-2 link-dark"><span style="font-weight: bold;">Practice </span></a></li>
+    </ul>
+    <div>
+      <button type="button" class="btn btn-outline-secondary me-2">Login</button>
+      <button type="button" class="btn btn-secondary">Sign-up</button>
+    </div>
+  </header>
+</div>
