--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -1,4 +1,4 @@
-<div class="container fixed-bottom">
+<div class="container mt-auto">
     <footer class="d-flex flex-wrap justify-content-between align-items-center pt-2 pb-3 mb-1 border-top">
       <div class="col-md-4 d-flex align-items-center">
         <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
@@ -41,4 +41,4 @@
        
       </ul>
     </footer>
-  </div>
+  </div> 
