--- a/src/views/words.ejs
+++ b/src/views/words.ejs
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/main.css">
 
 </head>
-<body class="container">
+<body class="d-flex flex-column min-vh-100">
     <%- include('partials/header') %>
 
     <%- include('partials/footer') %>
