Make first queries to add data to db

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -25,3 +25,12 @@ body {
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
+.word-grid {
+    background-color: aquamarine;
+    height: 100vh;
+    display: grid;
+    gap: 2rem;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+}
+
