--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -1,6 +1,6 @@
 
 <div class="container">
-  <header class="d-flex align-items-center justify-content-md-between py-2 border-bottom">
+  <header class="d-flex align-items-center justify-content-md-between py-2 border-bottom border-secondary">
     <a href="/" class="d-flex align-items-center text-dark text-decoration-none">
       <img src="images/echoverseLogo.png" alt="Header logo" style="width: 70px;">
       <span class="fw-bold">Echo Verse</span>
