--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Home Page</title>
+        <title>Echo Verse | Home Page</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/button.css">
@@ -13,6 +13,11 @@
         <section id="header">
             <%- include('partials/header') %>
         </section>
+
+
+        
+        <p class="container d-flex justify-content-end pb-0 mb-0 fw-bold">Remaining Words : <%= 20 - words.length %></p>
+
 
         <section id="content">
             <%- include('partials/wrapper') %>
