--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -8,16 +8,14 @@
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/button.css">
         <link rel="stylesheet" href="css/input.css">
+        <link rel="stylesheet" href="css/card.css">
     </head>
     <body class="d-flex flex-column min-vh-100">
         <section id="header">
             <%- include('partials/header') %>
         </section>
 
-
-        
-        <p class="container d-flex justify-content-end pb-0 mb-0 fw-bold">Remaining Words : <%= 20 - words.length %></p>
-
+        <p class="container d-flex text-light justify-content-end pb-0 mb-0 fw-bold">Remaining Words : <%= 20 - words.length %></p>
 
         <section id="content">
             <%- include('partials/wrapper') %>
