--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -1,12 +1,12 @@
 
 <div class="container">
-  <header class="d-flex align-items-center justify-content-md-between border-bottom border-secondary pb-0 mb-0">
+  <header class="d-flex align-items-center justify-content-md-between pb-0 mb-0">
     <a href="/" class="d-flex align-items-center text-dark text-decoration-none">
       <img src="images/echoverseLogo.png" alt="Header logo" style="width: 70px;">
       <span class="fw-bold">Echo Verse</span>
     </a>
     <ul class="nav gap-4">
-      <li><a href="/" class="nav-link px-2 link-secondary"><span style="font-weight: bold;">Home</span></a></li>
+      <li><a href="/" class="nav-link px-2 link-dark"><span style="font-weight: bold;">Home</span></a></li>
       <li><a href="/words" class="nav-link px-2 link-dark"><span style="font-weight: bold;">Words</span></a></li>
       <li><a href="/practice" class="nav-link px-2 link-dark"><span style="font-weight: bold;">Practice </span></a></li>
     </ul>
