--- a/src/views/partials/wrapper.ejs
+++ b/src/views/partials/wrapper.ejs
@@ -1,6 +1,6 @@
 <div class="container wrapper">
     <% words.forEach(element=> { %>
-        <div class="card m-2 grid-placement">
+        <div class="card word-card m-2 grid-placement">
             <div class="card-body d-flex flex-column align-items-center text-center">
                 <span class="py-2 fw-bold border-3 border-bottom"><%- element.en_word %></span>
                 <form action="/check" class="pt-3" method="POST">
@@ -14,9 +14,9 @@
     <% }) %>
 
         <div class="container d-flex align-items-end justify-content-center plus-button-grid">
-            <div class="border d-none" id="input-box"> <!-- Bootstrap 'd-none' sınıfı ile başlangıçta gizli -->
+            <div class="border d-none word-card border-radius-2" id="input-box"> <!-- Bootstrap 'd-none' sınıfı ile başlangıçta gizli -->
                 <form action="/new" class="d-flex flex-column row align-items-center" method="POST">
-                    <label class="col-6 text-center mb-4 border-bottom" for="word">Enter the Word</label>
+                    <label class="col-6 fw-bold text-center mb-4 border-bottom" for="word">Enter the Word</label>
                     <div class="col-11 text-center d-flex justify-content-around">
                         <input class="mx-2 input-filed w-75" type="text" id="word" placeholder="English Word" name="word">
                         <button type="submit" class="button-35">Add</button>
