--- a/public/css/input.css
+++ b/public/css/input.css
@@ -8,7 +8,7 @@
     border-radius: 3px;
     padding: 9px 12px;
     line-height: 1.4;
-    color: rgb(0, 0, 0);
+    color: #2A2438;
     font-size: 14px;
     font-weight: 100;
     height: 35px;
@@ -16,11 +16,11 @@
 }
 
 .input-filed:hover {
-    box-shadow: 0 0 0 0 #fff inset, #1de9b6 0 0 0 2px;
+    box-shadow: 0 0 0 0 #FAF0E6 inset, #352F44 0 0 0 2px;
 }
 
 .input-filed:focus {
-    background: #fff;
+    background: #FAF0E6;
     outline: 0;
-    box-shadow: 0 0 0 0 #fff inset, #1de9b6 0 0 0 3px;
+    box-shadow: 0 0 0 0 #FAF0E6 inset, #352F44 0 0 0 3px;
 }
