--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -1,5 +1,5 @@
 <div class="container mt-auto">
-    <footer class="d-flex flex-wrap justify-content-between align-items-center pt-2 pb-3 mb-1 border-top">
+    <footer class="d-flex flex-wrap justify-content-between align-items-center pt-2 pb-3 mb-1 border-top border-secondary">
       <div class="col-md-4 d-flex align-items-center">
         <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
           <svg width="30px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
