--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -15,7 +15,7 @@
             <%- include('partials/header') %>
         </section>
 
-        <p class="container d-flex text-light justify-content-end pb-0 mb-0 fw-bold">Remaining Words : <%= 20 - words.length %></p>
+        <p class="container d-flex text-dark justify-content-end pb-0 mb-0 fw-bold">Remaining Words : <%= 20 - words.length %></p>
 
         <section id="content">
             <%- include('partials/wrapper') %>
