--- a/src/views/partials/wrapper.ejs
+++ b/src/views/partials/wrapper.ejs
@@ -3,7 +3,7 @@
         <div class="card word-card m-2 grid-placement">
             <div class="card-body d-flex flex-column align-items-center text-center">
                 <h5 class="py-2 fw-bold border-3 border-bottom"><%- element.en_word %></h5>
-                <form action="/check" class="pt-3" method="POST">
+                <form action="/check/<%= element._id %>" class="pt-3" method="POST">
                     <div class="d-flex align-items-center">
                         <input class="mx-2 input-filed" type="text" id="word" placeholder="Enter meaning" name="check_word" size="15">
                         <button type="submit" class="button-35">Check</button>
