Edit some views

--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -59,14 +59,11 @@
                 <div class="row gx-lg-5 align-items-center mb-5">
                     <div class="col-lg-6 mb-5 mb-lg-0" style="z-index: 10">
                         <h1 class="my-5 display-5 fw-bold ls-tight" style="color: hsl(218, 81%, 95%)">
-                            The best offer <br />
-                            <span style="color: hsl(218, 81%, 75%)">for your business</span>
+                            The best<br />
+                            <span style="color: hsl(218, 81%, 75%)">word memorization site</span>
                         </h1>
                         <p class="mb-4 opacity-70" style="color: hsl(218, 81%, 85%)">
-                            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                            Temporibus, expedita iusto veniam atque, magni tempora mollitia
-                            dolorum consequatur nulla, neque debitis eos reprehenderit quasi
-                            ab ipsum nisi dolorem modi. Quos?
+                            A trick to easily memorize English-Turkish words, and to memorize words from the computer without using paper.
                         </p>
                     </div>
         
@@ -76,32 +73,22 @@
         
                         <div class="card bg-glass"> 
                             <div class="card-body px-4 pt-4 px-md-5">
-                                <form>
+                                <form action="/users/login" method="POST">
                                     <div class="d-flex justify-content-center py-4">
-                                        <h2 style="font-weight: bolder;">Login</h2>
+                                        <h2 style="font-weight: bolder;">Login to EchoVerse</h2>
                                     </div>
                                     
                                     <!-- Email input -->
                                     <div data-mdb-input-init class="form-outline mb-4">
                                         <label class="form-label" for="form3Example3">Email address</label>
-                                        <input type="email" id="form3Example3" class="form-control" />
+                                        <input type="email" id="form3Example3" name="email" class="form-control" />
                                     </div>
         
                                     <!-- Password input -->
                                     <div data-mdb-input-init class="form-outline mb-4">
                                         <label class="form-label" for="form3Example4">Password</label>
-                                        <input type="password" id="form3Example4" class="form-control" />
+                                        <input type="password" id="form3Example4" name="password" class="form-control" />
                                     </div>
-        
-                                    <!-- Checkbox -->
-                                    <div class="form-check d-flex justify-content-center mb-4">
-                                        <input class="form-check-input me-2" type="checkbox" value="" id="form2Example33"
-                                            checked />
-                                        <label class="form-check-label" for="form2Example33">
-                                            Subscribe to our newsletter
-                                        </label>
-                                    </div>
-        
                                     <!-- Submit button -->
                                     <div class="d-flex justify-content-center">
                                         <button type="submit" class="btn btn-secondary btn-block mb-4  w-50">Login</button>
