--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -1,18 +1,46 @@
-
 <div class="container">
-  <header class="d-flex align-items-center justify-content-md-between border-bottom border-secondary pb-0 mb-0">
-    <a href="/" class="d-flex align-items-center text-dark text-decoration-none">
-      <img src="images/echoverseLogo.png" alt="Header logo" style="width: 70px;">
-      <span class="fw-bold">Echo Verse</span>
-    </a>
-    <ul class="nav gap-4">
-      <li><a href="/" class="nav-link px-2 link-dark"><span style="font-weight: bold;">Home</span></a></li>
-      <li><a href="/words" class="nav-link px-2 link-dark"><span style="font-weight: bold;">Words</span></a></li>
-      <li><a href="/practice" class="nav-link px-2 link-dark"><span style="font-weight: bold;">Practice </span></a></li>
-    </ul>
-    <div>
-      <button type="button" class="btn btn-outline-secondary me-2">Login</button>
-      <button type="button" class="btn btn-secondary">Sign-up</button>
-    </div>
+<header class="d-flex align-items-center justify-content-md-between border-bottom border-secondary pb-0 mb-0">
+   
+      <a href="/" class="d-flex align-items-center text-dark text-decoration-none">
+        <img src="images/echoverseLogo.png" alt="Header logo" style="width: 70px;">
+        <span class="fw-bold">Echo Verse</span>
+      </a>
+
+      <ul class="nav gap-4">
+        <li><a href="/" class="nav-link px-2 link-dark"><span style="font-weight: bold;">Home</span></a></li>
+        <li><a href="/words" class="nav-link px-2 link-dark"><span style="font-weight: bold;">Words</span></a></li>
+        <li><a href="/practice" class="nav-link px-2 link-dark"><span style="font-weight: bold;">Practice </span></a></li>
+      </ul>
+      <% if (user) { %>
+        <div class="d-flex justify-content-center align-items-center">
+          <div class="dropdown">
+            <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
+              <img src="https://github.com/mdo.png" alt="mdo" width="32" height="32" class="rounded-circle">
+            </a>
+            <ul class="dropdown-menu text-small" style="background-color: gray;" aria-labelledby="dropdownUser1">
+              <li><a class="dropdown-item" href="#">Profile</a></li>
+                <li><a class="dropdown-item " href="#">Settings</a></li>
+                <li><hr class="dropdown-divide"></li>
+                <form action="/users/logout" method="POST">
+                  <li><button type="submit" class="dropdown-item">Sign out</button></li>
+                </form>
+            </ul>
+          </div>
+          <div class="d-flex align-items-center mx-2">
+            <h6 class="fw-bold pt-2"><%= user.first_name %> <%= user.last_name %></h6>
+          </div>
+        </div>
+       
+      <% } else { %>
+          <div class="d-flex justify-content-center">
+            <form action="users/login?__method=GET" method="POST">
+              <button type="submit" class="btn btn-outline-secondary me-2">Login</button>
+            </form>
+            <form action="users/register?__method=GET" method="POST">
+              <button type="submit" class="btn btn-secondary">Sign-up</button>
+            </form>
+          </div>
+      <% } %>
+      
   </header>
 </div>
