--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -15,8 +15,11 @@
             <%- include('partials/header') %>
         </section>
 
+        
+
         <p class="container d-flex text-dark justify-content-end pb-0 mb-0 fw-bold">Remaining Words : <%= 20 - words.length %></p>
 
+        <%- include('partials/flash') %>
         <section id="content">
             <%- include('partials/wrapper') %>
         </section>
@@ -24,7 +27,9 @@
         <section id="footer">
             <%- include('partials/footer') %>
         </section>
+
         <script src="js/cardCreator.js"></script> 
+        <script src="js/main.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     </body>
 </html>
