Add input validation for register page

--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -87,7 +87,7 @@
                                     <!-- Password input -->
                                     <div data-mdb-input-init class="form-outline mb-4">
                                         <label class="form-label" for="form3Example4">Password</label>
-                                        <input type="password" id="form3Example4" name="password" class="form-control" />
+                                        <input type="password" id="form3Example4" name="password" class="form-control" required />
                                     </div>
                                     <!-- Submit button -->
                                     <div class="d-flex justify-content-center">
