--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -72,7 +72,7 @@
     
                     <div class="card bg-glass">
                         <div class="card-body px-4 py-5 px-md-5">
-                            <form action="/users/register" method="POST">
+                            <form action="/users/register" method="POST" id="registerForm">
                                 <div class="d-flex justify-content-center py-4">
                                     <h2 style="font-weight: bolder;">Register</h2>
                                 </div>
@@ -103,13 +103,15 @@
                                     <label class="form-label" for="password">Password</label>
                                     <input type="password" id="password" name="password" required class="form-control" />
                                 </div>
-                                <div data-mdb-input-init class="form-outline mb-4">
-                                    <label class="form-label" for="againPassword">Password Again</label>
+                                <div data-mdb-input-init class="form-outline">
+                                    <label class="form-label" for="againPassword">Confirm Password</label>
                                     <input type="password" id="againPassword" name="againPassword" required class="form-control" />
                                 </div>
+                                <div id="passwordError" class="invalid-feedback" style="display: none;">Passwords do not match</div>
+
 
                                 <!-- Submit button -->
-                                <div class="d-flex justify-content-center">
+                                <div class="d-flex justify-content-center mt-4">
                                     <button type="submit" class="btn btn-secondary btn-block mb-4  w-50">Register</button>
                                 </div>
                             </form>
@@ -125,6 +127,27 @@
             </div>
         </div>
     </section>
-    <!-- Section: Design Block -->
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            const registerForm = document.getElementById('registerForm');
+
+            registerForm.addEventListener('submit', function (event) {
+                event.preventDefault(); // Form submitini engelle
+
+                // Parola alanlarına eriş
+                const password = document.getElementById('password').value;
+                const againPassword = document.getElementById('againPassword').value;
+
+                // Parolaların eşleşip eşleşmediğini kontrol et
+                if (password !== againPassword && password !== '' && againPassword !== '') {
+                    // Parolalar eşleşmiyorsa hata mesajını göster
+                    passwordError.style.display = 'block';
+                } else {
+                    // Parolalar eşleşiyorsa formu gönder
+                    registerForm.submit();
+                }
+            });
+        });
+    </script>
 </body>
 </html>
