--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -59,8 +59,8 @@
                 <div class="row gx-lg-5 align-items-center mb-5">
                     <div class="col-lg-6 mb-5 mb-lg-0" style="z-index: 10">
                         <h1 class="my-5 display-5 fw-bold ls-tight" style="color: hsl(218, 81%, 95%)">
-                            The best<br />
-                            <span style="color: hsl(218, 81%, 75%)">word memorization site</span>
+                            Echo Verse<br />
+                            <span style="color: hsl(218, 81%, 75%)">The best <br />word memorization </span>
                         </h1>
                         <p class="mb-4 opacity-70" style="color: hsl(218, 81%, 85%)">
                             A trick to easily memorize English-Turkish words, and to memorize words from the computer without using paper.
